syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ynov.product.grpc";
option java_outer_classname = "ProductServiceProto";

package product;

// The product service definition.
service ProductService {
  // Sends a request for a product by ID
  rpc GetProductById(ProductByIdRequest) returns (ProductResponse) {}
}

// The request message containing the product ID.
message ProductByIdRequest {
  string product_id = 1;
}

// The response message containing the product's data.
message ProductResponse {
  string product_id = 1;
  string name = 2;
  string description = 3;
  int32 quantity = 4;
  double price = 5;
}
